envoy.local.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: <ip>
      port_value: 9901

layered_runtime:
  layers:
    - name: disk
      disk_layer:
        symlink_root: /etc/envoy/runtime
        subdirectory: ""
    - name: admin
      admin_layer: {}

static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: <ip>
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: http_redirect
                  virtual_hosts:
                    - name: redirect_all
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          redirect:
                            https_redirect: true
                            port_redirect: 8443
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: listener_https
      address:
        socket_address:
          address: <ip>
          port_value: 8443
      listener_filters:
        - name: envoy.filters.listener.tls_inspector
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: /etc/envoy/certs/local.crt
                    private_key:
                      filename: /etc/envoy/certs/local.key
                tls_params:
                  tls_minimum_protocol_version: TLSv1_2
                  tls_maximum_protocol_version: TLSv1_3
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_https
                use_remote_address: true
                xff_num_trusted_hops: 0
                upgrade_configs:
                  - upgrade_type: websocket
                route_config:
                  name: local_prod_routes
                  virtual_hosts:
                    - name: local_prod
                      domains:
                        - "*"
                      response_headers_to_add:
                        - header:
                            key: X-Content-Type-Options
                            value: "nosniff"
                          append_action: OVERWRITE_IF_EXISTS_OR_ADD
                        - header:
                            key: X-XSS-Protection
                            value: "1; mode=block"
                          append_action: OVERWRITE_IF_EXISTS_OR_ADD
                        - header:
                            key: Content-Security-Policy
                            value: "default-src 'self'; script-src 'self' 'sha256-ZswfTY7H35rbv8WC7NXBoiC7WNu86vSzCDChNWwZZDM='; style-src 'self'; connect-src 'self'; font-src 'self'; object-src 'none';"
                          append_action: OVERWRITE_IF_EXISTS_OR_ADD
                        - header:
                            key: X-Frame-Options
                            value: "SAMEORIGIN"
                          append_action: OVERWRITE_IF_EXISTS_OR_ADD
                      routes:
                        - match:
                            safe_regex:
                              regex: "^/share/(.*)"
                          route:
                            cluster: metadata_api
                            regex_rewrite:
                              pattern:
                                regex: "^/share/(.*)"
                              substitution: "/api/metadata/\\1?html=true"
                        - match:
                            prefix: "/.within.website/"
                          route:
                            cluster: anubis
                        - match:
                            path: "/api/metadata"
                          route:
                            cluster: metadata_api
                        - match:
                            prefix: "/api/metadata/"
                          route:
                            cluster: metadata_api
                        - match:
                            prefix: "/api/"
                          route:
                            cluster: metadata_api
                        - match:
                            path: "/js/script.js"
                          route:
                            cluster: plausible
                            host_rewrite_literal: plausible.<domain>
                        - match:
                            path: "/api/event"
                          route:
                            cluster: plausible
                            host_rewrite_literal: plausible.<domain>
                        - match:
                            prefix: "/peerjs"
                          route:
                            cluster: peerjs
                            timeout: 0s
                        - match:
                            prefix: "/download-bridge/"
                          route:
                            weighted_clusters:
                              clusters:
                                - name: app_blue
                                  weight: 100
                                - name: app_green
                                  weight: 0
                              total_weight: 100
                              runtime_key_prefix: traffic_split
                        - match:
                            prefix: "/streamsaver/"
                          route:
                            weighted_clusters:
                              clusters:
                                - name: app_blue
                                  weight: 100
                                - name: app_green
                                  weight: 0
                              total_weight: 100
                              runtime_key_prefix: traffic_split
                        - match:
                            prefix: "/assets/"
                          route:
                            weighted_clusters:
                              clusters:
                                - name: app_blue
                                  weight: 100
                                - name: app_green
                                  weight: 0
                              total_weight: 100
                              runtime_key_prefix: traffic_split
                        - match:
                            prefix: "/"
                          route:
                            weighted_clusters:
                              clusters:
                                - name: app_blue
                                  weight: 100
                                - name: app_green
                                  weight: 0
                              total_weight: 100
                              runtime_key_prefix: traffic_split
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: app_blue
      connect_timeout: 2s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: app_blue
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: app-blue
                      port_value: 3000
    - name: app_green
      connect_timeout: 2s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: app_green
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: app-green
                      port_value: 3000
    - name: peerjs
      connect_timeout: 2s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: peerjs
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: peerjs-server
                      port_value: 9000
    - name: metadata_api
      connect_timeout: 2s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: metadata_api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: metadata-api
                      port_value: 3001
    - name: anubis
      connect_timeout: 2s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: anubis
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: anubis
                      port_value: 8923
    - name: plausible
      connect_timeout: 2s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: plausible
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: plausible
                      port_value: 8000
